--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -39,29 +39,23 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <!-- Required to query activities that can process text, see:
-         https://developer.android.com/training/package-visibility and
-         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    <!-- Required to query activities that can process intents, such as dialing a number, sending an email, or opening a URL.
+         Android 11 (API 30) onwards requires this declaration. -->
     <queries>
-		<intent>
-			<action android:name="android.intent.action.PROCESS_TEXT" />
-			<data android:mimeType="text/plain" />
-		</intent>
-		<!-- If your app checks for SMS support -->
-		<intent>
-			<action android:name="android.intent.action.VIEW" />
-			<data android:scheme="sms" />
-		</intent>
-		<!-- If your app checks for call support -->
-		<intent>
-			<action android:name="android.intent.action.VIEW" />
-			<data android:scheme="tel" />
-		</intent>
-		<!-- If your application checks for inAppBrowserView launch mode support -->
-		<intent>
-			<action android:name="android.support.customtabs.action.CustomTabsService" />
-		</intent>
-	</queries>
+        <!-- For sending emails -->
+        <intent>
+            <action android:name="android.intent.action.SENDTO" />
+            <data android:scheme="mailto" />
+        </intent>
+        <!-- For opening web pages -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <!-- For making phone calls -->
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
+    </queries>
 </manifest>
