--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   svg_flutter: ^0.0.1
   url_launcher: ^6.3.0
   firebase_core: ^3.15.1
+  add_2_calendar: ^3.0.1
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
