--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   firebase_messaging: ^15.2.9
+  flutter_local_notifications: ^17.2.1
   brasil_fields: ^1.15.0
   carousel_slider: ^5.0.0
   collection: ^1.18.0
