--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -26,7 +26,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "io.vitalink.app"
-    compileSdk = 35
+    // Conditional for property not found.
+    compileSdkVersion 35
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -40,11 +41,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "io.vitalink.app"
+        applicationId = "io.vitalink.app"
         // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
+        minSdkVersion 23
+        targetSdkVersion = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
