--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   add_2_calendar: ^3.0.1
   image_picker: ^1.1.2
   path_provider: ^2.1.5
+  firebase_auth: ^5.6.2
+  google_sign_in: ^6.2.2
+  sign_in_button: ^4.0.1
 
 dev_dependencies:
   flutter_test:
