--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^5.6.2
   google_sign_in: ^6.2.2
   sign_in_button: ^4.0.1
+  go_router: ^15.1.2
 
 dev_dependencies:
   flutter_test:
