--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:label="vitalink"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- Enable Flutter deep linking -->
+        <meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -33,6 +35,13 @@
 				<category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="vitalink" android:host="app" />
 			</intent-filter>
+            <!-- Accept links without host, e.g. vitalink://email-verified -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="vitalink" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
