--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^6.2.2
   sign_in_button: ^4.0.1
   go_router: ^15.1.2
+  app_links: ^6.4.0
 
 dev_dependencies:
   flutter_test:
