--- a/api/composer.json
+++ b/api/composer.json
@@ -60,6 +60,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "vendor-dir": "../vendor",
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
