--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,12 @@
     "devDependencies": {
     
         "@tailwindcss/vite": "^4.0.0",
-        "alpinejs": "^3.14.9",
-    
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0.5",
-    
         "tailwindcss": "^4.0.0",
-        "vite": "^5.2.8"
+        "vite": "^5.2.8",
+
+        "alpinejs": "^3.14.9"
     }
 }
