fix(projecto): consertar erro de versão usando FVM

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -52,3 +52,6 @@ app.*.map.json
 /windows/flutter/generated_plugins.cmake
 
 /macos/Flutter/GeneratedPluginRegistrant.*
+
+# FVM Version Cache
+.fvm/
