--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sign_in_button: ^4.0.1
   go_router: ^15.1.2
   app_links: ^6.4.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,3 +65,4 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
