--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^15.1.2
   app_links: ^6.4.0
   flutter_dotenv: ^6.0.0
+  flutter_widget_from_html_core: ^0.16.1
 
 dev_dependencies:
   flutter_test:
